# Geiger

./: .gitignore  README.md  pyproject.toml
examples/: sample_tools.md
geiger/: __init__.py  config.py  main.py  types.py
geiger/agent/: __init__.py  executor.py  review.py
geiger/dataset/: __init__.py  formatter.py  generator.py
geiger/tools/: __init__.py  parser.py  runner.py
tests/: test_config.py  test_executor.py  test_formatter.py  test_generator.py  test_parser.py  test_review.py  test_runner.py
