[project]
name = "geiger"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "aiofiles",
    "rich",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["geiger*"]